--- a/index.org
+++ b/index.org
@@ -1,26 +1,15 @@
----
-title: "Yield to Maturity (YTM) and What It's Used For"
-author: "Matt Brigida"
-logo: misq.png
-css: 5min_mod.css
-output: html_document
-runtime: shiny
-smaller: true
----
+#+title: Yield to Maturity (YTM) and What It's Used For
+#+author: Matt Brigida
+#+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-```
 
-## YTM Gives Us the Bond's Price
+* YTM Gives Us the Bond's Price
 
 Given the YTM and a bond's cash flows, we can calculate the bond's price.  Say a 10-year bond pays an annual \$50 coupon and has a 3\% YTM.  Then the bond's value is (using the present value of an annuity formula):
 
 $V_0 = \$50(\frac{1 - \frac{1}{1.03^{10}}}{0.03}) + \frac{\$1000}{1.03^{10}} = \$1170.60$
 
-<div class="MIfooter"><img src="mi.png" style="height:50px;"></div> 
-
-## How Do We Get the YTM?
+* How Do We Get the YTM?
 
 To get the YTM, we solve for the rate which makes the present value of the bond's payments equal to the bond's price. So say a bond's price is \$900 and it pays an \$80 annual coupon for the next 5 years.  Then the YTM is:
 
@@ -28,9 +17,7 @@ $\$900 = \$80(\frac{1 - \frac{1}{(1 + YTM)^{5}}}{YTM}) + \frac{\$1000}{(1+YTM)^{
 
 We can solve this equation for $YTM$ using methods such as [Newton-Raphson](https://en.wikipedia.org/wiki/Newton%27s_method).  In this case the $YTM = 10.68\%$.
 
-<div class="MIfooter"><img src="mi.png" style="height:50px;"></div> 
-
-## Circular?
+* Circular?
 
 So we get the bond's price be using the YTM, but we get the YTM by observing the bond's price.  Isn't this circular?  
 
@@ -38,9 +25,7 @@ Seemingly, yes.  What the YTM actually does is quote the bond's return to you.  
 
 -  We do not use the YTM to determine how much to pay for a bond (as in [bond valuation](http://www.5minutefinance.org/concepts/an-introduction-to-bond-valuation)).  We can only use it to know what the present price is.
 
-<div class="MIfooter"><img src="mi.png" style="height:50px;"></div> 
-
-## Why Quote a Bond's Return?
+* Why Quote a Bond's Return?
 
 Different 5-year U.S. Treasury Notes, as one example, may each have different prices.  *But all will have the same YTM.*  
 
@@ -56,7 +41,7 @@ By arbitrage, each bond with have the same 1\% YTM.  So this means the bond pric
 - Note B: \$1388.27
 - Note C: \$1000.00
 
-<div class="MIfooter"><img src="mi.png" style="height:50px;"></div> 
+ 
 
 <!--- add arbitrage to prove they must all have 1% YTM? -->
 
@@ -72,21 +57,21 @@ By arbitrage, each bond with have the same 1\% YTM.  So this means the bond pric
 ##     ),
 ## mainPanel(
 ##     renderMetricsgraphics({
-
-
-
+##
+##
+##
 ##         })
 ```
 -->
 
-##  Interactive App
+*  Interactive App
 
 The following app allows you to calculate the bond's price given the *YTM*, or alternatively calculate the *YTM* given the bond's price.  
 
-<div class="MIfooter"><img src="mi.png" style="height:50px;"></div> 
+ 
 
 
-##
+*
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 #{{{
@@ -98,7 +83,7 @@ sidebarLayout(
         
         conditionalPanel(
             condition = "input.yyy == '2'",
-            ## to get bond price ----
+            * to get bond price ----
             sliderInput("ytm", label = "Yield to Maturity", max = .2, min = 0.01, value = .05, step = .01),
             sliderInput("coupon", label = "Coupon Rate", max = .2, min = 0, value = .05, step = .01),
             sliderInput("maturity", label = "Years to Maturity", max = 50, min = 1, value = 10),
@@ -106,7 +91,7 @@ sidebarLayout(
         ),
         conditionalPanel(
             condition = "input.yyy == '1'",
-            ## to get YTM ----
+            * to get YTM ----
             sliderInput("bondPrice", label = "The Bond's Price", max = 2000, min = 1, value = 1000, step = 10),
             sliderInput("coupon1", label = "Coupon Rate", max = .2, min = 0, value = .05, step = .01),
             sliderInput("maturity1", label = "Years to Maturity", max = 50, min = 1, value = 10),
@@ -120,7 +105,7 @@ sidebarLayout(
 
             if(input$yyy == '1') {
 
-            ## YTM calculation from app ----
+            * YTM calculation from app ----
             bondValue <- 0
             ytmAxis <- seq(0.01, .2, by = .01)
             CFs <- 0
@@ -151,27 +136,27 @@ sidebarLayout(
             plot(0, ylim = c(0,1), xlim = c(0,1), type = "n", xaxt = "n", yaxt = "n", ylab = "", xlab = "")
             text(x = 0.5, y = 0.5, labels = paste((100 * round(ytmResult, 4)), "%"), cex = 5)
 
-	    ## bond value calculation from app ----
+	    * bond value calculation from app ----
             bondValue <- 0
             ytmAxis <- seq(0.01, .2, by = .01)
 
 
-            ## cash_flows <- 0
-            ## for (i in 1:input$maturity){
-            ##     cash_flows[i] <- 
-            ##         (input$coupon * 1000) }
+            * cash_flows <- 0
+            * for (i in 1:input$maturity){
+            *     cash_flows[i] <- 
+            *         (input$coupon * 1000) }
 
-            ## cash_flows[length(cash_flows)] <- cash_flows[length(cash_flows)] + 1000 
-            ## pvCashFlows <- cash_flows / (1 + input$ytm)^(1:input$maturity)
+            * cash_flows[length(cash_flows)] <- cash_flows[length(cash_flows)] + 1000 
+            * pvCashFlows <- cash_flows / (1 + input$ytm)^(1:input$maturity)
             } else {
-### Bond Calculation: includes semiannual case which is not used ----   
+*# Bond Calculation: includes semiannual case which is not used ----   
             if (input$period == 1) {
-                ## for (i in seq_along(ytmAxis)){
+                * for (i in seq_along(ytmAxis)){
                 bondValue <- (input$coupon * 1000) * ((1 - 1 / (1 + input$ytm)^(input$maturity)) / input$ytm) + 1000 / (1 + input$ytm)^(input$maturity) #}
             }    else {
-                ## for (i in seq_along(input$ytm)){
+                * for (i in seq_along(input$ytm)){
                 bondValue <- (input$coupon * (1000 / 2)) * ((1 - 1 / (1 + (input$ytm / 2))^(input$maturity * 2)) / (input$ytm / 2)) + 1000 / (1 + (input$ytm / 2))^(input$maturity * 2)
-                ## }
+                * }
             }
 
             plot(0, ylim = c(0,1), xlim = c(0,1), type = "n", xaxt = "n", yaxt = "n", ylab = "", xlab = "")
@@ -184,21 +169,10 @@ sidebarLayout(
 #}}}
 ```
 
-## So How do You Value a Bond?
+* So How do You Value a Bond?
 
 There are a couple of approaches to determine how much we would pay for a bond.  
 
 -  For a coupon bond with no default risk, we can discount each cash flow by the market-determined zero coupon rate.  If the bond is not default-risk free, we can adjust the rate for risk.
 
--  Often to value a corporate bond, you can use the YTM of a bond with similar risk.
-
-<div class="MIfooter"><img src="mi.png" style="height:50px;"></div> 
-
-
-## Credits and Collaboration
-
-Click the following links to see the [code](https://github.com/FinancialMarkets/5MinuteFinance/blob/master/Fixed_Income_and_Debt/For_What_YTM_Used/for_what_YTM_used.Rmd), [line-by-line contributions to this presentation](https://github.com/FinancialMarkets/5MinuteFinance/blame/master/Fixed_Income_and_Debt/For_What_YTM_Used/for_what_YTM_used.Rmd), and [all the collaborators who have contributed to 5-Minute Finance via GitHub](https://github.com/FinancialMarkets/5MinuteFinance/graphs/contributors).
-
-Learn more about how to contribute [here](http://www.5minutefinance.org/how-to-contribute).
-
-<div class="MIfooter"><img src="mi.png" style="height:50px;"></div> 
+-  Often to value a corporate bond, you can use the YTM of a bond with similar risk. 
